--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "axios": "^1.6.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.302.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
